# rust_bootstrapper

./: .gitignore  Cargo.toml  README.md
src/: cli.rs  download.rs  install.rs  lib.rs  main.rs  manifest.rs  shortcut.rs  verify.rs
