[package]
name = "paradise-bootstrapper"
version = "0.1.0"
edition = "2021"
authors = ["paradise Team"]
description = "Windows bootstrapper and installer for paradise application"
license = "MIT"

[dependencies]
reqwest = { version = "0.11", features = ["blocking", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
hex = "0.4"
zip = "0.6"
directories = "5.0"
tempfile = "3.8"
log = "0.4"
simplelog = "0.12"
windows = { version = "0.52", features = [
    "Win32_Foundation",
    "Win32_System_Com",
    "Win32_System_Ole",
    "Win32_UI_Shell",
    "Win32_UI_Shell_Common",
    "Win32_System_Registry",
] }
anyhow = "1.0"
thiserror = "1.0"
chrono = "0.4"

[dev-dependencies]
tempfile = "3.8"

[lib]
name = "paradise_bootstrapper"
path = "src/lib.rs"

[[bin]]
name = "paradise-bootstrapper"
path = "src/main.rs"

